# ChangeLog for sys-apps/busybox
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.8 2002/12/21 00:35:38 avenj Exp $


*busybox-0.60.5.ebuild (20 Dec 2002)
   20 Dec 2002; Jon Portnoy <avenj@gentoo.org> busybox-0.60.5.ebuild :
   Version bump.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*busybox-0.50.ebuild (14 July 2002)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> busybox-0.50.ebuild :
  Added KEYWORDS, SLOT.

*busybox-0.60.3 (21 May 2002)

  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
  updated keywords (ppc)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> busybox-0.60.3.ebuild :
  Added KEYWORDS, SLOT.

  21 May 2002; Wout Mertens <wmertens@gentoo.org> busybox-0.60.3.ebuild
  files/dodeps files/Config.h-0.60.3-cd:

  Upped to new stable version. Played with settings to get smallish build
  that provides as much as possible. See the files/dodeps script.

*busybox-0.60.2 (1 Feb 2002)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> busybox-0.60.2.ebuild :
  Added KEYWORDS, SLOT.

  24 Feb 2002; Donny Davies <woodchip@gentoo.org> files/Config.h-0.60.2-cd :

  Comment out #define BB_MT since we're including the 'real' mt-st on the
  boot CD now.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.